syntax = "proto3";

option go_package = "github.com/XiovV/dokkup";

service Dokkup {
  rpc DeployJob(DeployJobRequest) returns (stream DeployJobResponse) {}
  rpc StopJob(StopJobRequest) returns (stream StopJobResponse) {}
  rpc RollbackJob(RollbackJobRequest) returns (stream RollbackJobResponse) {}
  rpc GetNodeStatus(GetNodeStatusRequest) returns (NodeStatus) {}
  rpc GetJobStatus(GetJobStatusRequest) returns (JobStatus) {}
}

message DeployJobRequest {
  int32 count = 1;
  string name = 2;
  Container container = 3;
}

message DeployJobResponse {
  string message = 1;
}

message StopJobRequest {
  string name = 1;
}

message StopJobResponse {
  string message = 1;
}

message RollbackJobRequest {
  string name = 1;
}

message RollbackJobResponse {
  string message = 1;
}

message Container {
  string image = 1;
  repeated Port ports = 2;
  string network = 3;
  repeated string volumes = 4;
  repeated string environment = 5;
  string restart = 6;
  repeated string labels = 7;
}

message Port {
  string in = 1;
  string out = 2;
}

message GetNodeStatusRequest {

}

message NodeStatus {
  int32 runningContainers = 1;
  int32 totalContainers = 2;
  bool shouldUpdate = 3;
}

message GetJobStatusRequest {
  string Name = 1;  
}

message JobStatus {
  int32 runningContainers = 1;
  int32 totalContainers = 2;
  bool shouldUpdate = 3;
}
